--- a/src/app/game-modes/endless-trivia/endless-trivia.component.html
+++ b/src/app/game-modes/endless-trivia/endless-trivia.component.html
@@ -7,7 +7,7 @@
 <body>
   <div class="ticker">
     <h1 id="score">SCORE: {{ user_score }}</h1>
-<h1 routerLink="/home" id="quit" (click)="gameOver()">QUIT</h1>
+    <h1 routerLink="/home" id="quit" (click)="gameOver()">QUIT</h1>
   </div>
   <div id="q_cont">
     <h1 id="q_title">Question</h1>
@@ -16,18 +16,25 @@
   <div id="h_cont">
     <!-- <h1 id="h_title">Hint</h1> -->
     <img src="{{ giphHint }}" alt="" />
-      <button id="next_hint" (click)="nextGiphHint()">Next Hint</button>
+    <button id="next_hint" (click)="nextGiphHint()">Next Hint</button>
   </div>
-
-
 
   <div id="button_cont">
     <input
       id="user_answer"
       type="text"
       placeholder="  Your answer"
+      required
       [(ngModel)]="user_answer"
     />
-    <button (click)="submitAnswer()">Submit</button>
+    <button mat-button (click)="submitAnswer(event)" id="sub_button">
+      Submit
+    </button>
+  </div>
+  <div id="correct_message" *ngIf="correct_message">
+    <div class="fade"><div id="correct">Crushed it</div></div>
+  </div>
+  <div id="wrong_message" *ngIf="wrong_message">
+    <div class="fade"><div id="wrong">Strike {{strikes}}</div></div>
   </div>
 </body>
