--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -1,7 +1,3 @@
-img {
-    height: 150px;
-    display: flex;
-}
 
 body {
   min-height: 90vh;
@@ -23,13 +19,14 @@ body {
 
 li {
   list-style-type: none;
-  font-weight: 200;
+  font-family: 'poppins', sans-serif;
+  font-weight: 600;
   font-size: 1.5em;
   background-image: linear-gradient(to left, grey, white);
-  color: black;
-  font-family: 'Roboto Slab', serif;
+  color: rgb(58, 58, 58);
   padding: .6em .75em;
   display: flex;
+  border-bottom: 1px solid rgb(179, 179, 179);
 }
 
 .gold {
@@ -54,8 +51,11 @@ h1 {
   font-weight: 500;
   font-size: 30px;
   margin-bottom: 15px;
-  color:#4cc9f0;
-  font-family: 'Roboto Slab', serif;
+  background: #4cc9f0;
+  padding: 3px 8px;
+  border-radius: 3px;
+  color: rgba(58,12,163,1);
+  font-family: 'Bangers', serif;
 }
 
 .list-wrapper {
@@ -72,6 +72,7 @@ h1 {
   all: initial;
   margin-left: auto;
   font-size: .8em;
+  color: rgb(58, 58, 58);
 }
 
 /* button{
