--- a/src/app/player-profile/player-profile.component.css
+++ b/src/app/player-profile/player-profile.component.css
@@ -22,7 +22,7 @@
     border-left: 1px solid white;
     height: 100px;
     left: 50%;
-    margin-left: -3px;
+    margin-left: 3px;
     top: 0;
 }
 
@@ -89,11 +89,21 @@ button{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     flex-direction: row;
-
 }
 
+.buttonGroup{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items:center;
+    /* background-color: transparent; */
+    /* background: rgb(58,12,163); */
+    /* background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);*/
+} 
+
+
 body {
-    height: 90vh;
+    height: auto;
     width: 100vw;
     background: rgb(58,12,163);
     background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
@@ -118,23 +128,36 @@ body {
     font-family: 'Roboto Slab', serif;
 }
 
-.buttonGroup{
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items:center;
+p.ranking{
+    margin-left:1.5rem;
 }
-
 
 
   /* tablet screen */
   @media only screen and (min-width: 376px){
+    body {
+        height: 100vh;
+        width: 100vw;
+        background: rgb(58,12,163);
+        background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
+        padding: 0px;
+    }
 
+    p.ranking{
+        margin-left:1.5rem;
+    }
+    
 
       }
 
   /* computer screen */
    @media only screen and (min-width: 768px){
-
+    body {
+        height: 100vh;
+        width: 100vw;
+        background: rgb(58,12,163);
+        background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
+        padding: 0px;
+    }
 
    }
