--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -141,7 +141,7 @@ img {
     }
     .button-container{
       display: flex;
-      padding-top: 10%;
+      padding-top: 5%;
     }
     #ticker {
       background-color: #f72585;
@@ -159,9 +159,10 @@ img {
   /* computer screen */
    @media only screen and (min-width: 769px){
     img {
-      max-width: 140vw;
-      padding: 10px 10px 10px 26vw;
+      max-width: 175vw;
+      padding: 10px 10px 10px 38vw;
       display: flex;
+      justify-content: center;
       align-content: stretch;
       transition: 0.5s ease-in;
       }
@@ -184,7 +185,7 @@ img {
     }
     .button-container{
       display: flex;
-      padding-top: 10%;
+      padding-top: 5%;
     }
     #ticker {
       background-color: #f72585;
