--- a/src/app/choose-avatar/choose-avatar.component.html
+++ b/src/app/choose-avatar/choose-avatar.component.html
@@ -1,45 +1,8 @@
-
+<html>
 <div class="container">
-    <app-carousel-img [slides]="slides"></app-carousel-img>
+    <app-carousel-img [slides]="slides" ></app-carousel-img>
  </div>
-    
-<!-- <div class="avatarOptions">
-    <h1>Choose Avatar</h1>
+</html>
 
 
-    <div>
-        <div class="numbertext"> 1 / 7 </div><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=purple' alt="player-avatarOption" />
-        <div class ="text">Purple Bot</div>
-    </div>
 
-    <div>
-        <div class="numbertext"> 2 / 7 </div><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=pink' alt="player-avatarOption" />
-        <div class ="text">Pink Bot</div>
-    </div>
-
-    <div>
-        <div class="numbertext"> 3 / 7 </div><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=blue' alt="player-avatarOption" />
-        <div class ="text">Blue Bot</div>
-    </div>
-
-    <div>
-        <div class="numbertext"> 4 / 7 </div><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=green' alt="player-avatarOption" />
-        <div class ="text">Green Bot</div>
-    </div>
-
-    <div>
-        <div class="numbertext"> 5 / 7 </div><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=yellow' alt="player-avatarOption" />
-        <div class ="text">Yellow Bot</div>
-    </div>
-
-    <div>
-        <div class="numbertext"> 6 / 7 </div><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=orange' alt="player-avatarOption" />
-        <div class ="text">Orange Bot</div>
-    </div>
-
-    <div>
-        <div class="numbertext"> 7 / 7 </div><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=red' alt="player-avatarOption" />
-        <div class ="text">Red Bot</div>
-    </div>
-
- -->
