--- a/src/app/carousel-img/carousel-img.component.css
+++ b/src/app/carousel-img/carousel-img.component.css
@@ -6,16 +6,16 @@
     position: relative;
     height: 100%;
     width: 100%;
-    /* overflow: hidden; */
+    overflow: hidden;
     border-radius: 0.5em;
   }
   
   .slide {
     position: absolute;
-    top: 0;
+    top: 70px;
     left: 0;
-    width: 60%;
-    height: 60%;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
     border-radius: 0.5em;
@@ -28,21 +28,21 @@
   .control {
     border: none;
     background-color: transparent;
-    outline: 0;
+    outline: 0; 
     position: absolute;
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    padding-right: .8em;
+    justify-content: center;
+    padding: 0.5em;
     color: white;
     font-weight: bold;
     font-size: 3em;
     user-select: none;
-    height: 70%;
+    height: 100%;
     opacity: 80%;
-    transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);}
-  
+    transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+  }
     .control:hover, .control:focus 
     {
       opacity: 1;
@@ -57,11 +57,13 @@
   
   
   .arrow {
-    display: block;
-    border-left: 0.1em solid purple;
-    border-bottom: 0.1em solid purple;
+    display: flex;
+    align-items: baseline;
+    border-left: 0.1em solid #4cc9f0;
+    border-bottom: 0.1em solid #4cc9f0;
     width: 0.8em;
-    height: 0.8em;}
+    height: 0.8em;
+  }
   
     .arrow.left {
       transform: rotate(45deg);
