--- a/src/app/choose-avatar/choose-avatar.component.css
+++ b/src/app/choose-avatar/choose-avatar.component.css
@@ -1,21 +1,16 @@
-/* .avatar{
-    border-radius: 50%;
-    background-color:gray;
-    width: 100px;
-    height:100px;
-}
-
-.avatarOptions {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-} */
-
 .container {
   display: flex;
   justify-content: center;
-  height: 500px;
-  width: 300px;
+  margin-left: 18%;
+  height: 40%;
+  width: 40%;
   padding: 3em;
 }
+
+html {
+  background: rgb(58,12,163);
+  background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
+  height: 100vh;
+}
+
 
