--- a/src/app/player-profile/player-profile.component.css
+++ b/src/app/player-profile/player-profile.component.css
@@ -1,3 +1,4 @@
+  /* phone/mobile screen */
 .informationContainer{
     padding:2em;
     border: 1px solid white;
@@ -56,7 +57,7 @@ h2{
 }
 
 p{
-    font-size: 25px;
+    font-size: 20px;
     color:white;
     font-weight: 400;
     line-height: 35px;
@@ -119,7 +120,7 @@ body {
 }
 
 .ranking{
-    font-size: 25px;
+    font-size: 20px;
     font-family: 'Roboto Slab', serif;
 }
 
@@ -130,6 +131,12 @@ body {
 
 p.ranking{
     margin-left:1.5rem;
+}
+
+.playerStatsSection{
+    display:flex;
+    align-items:center;
+    justify-content:center;
 }
 
 
@@ -159,5 +166,52 @@ p.ranking{
         background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
         padding: 0px;
     }
+
+    .playerStatsSection{
+        display:flex;
+        align-items:center;
+        justify-content:center;
+    }
+
+    p{
+        font-size: 35px;
+        color:white;
+        font-weight: 400;
+        line-height: 35px;
+        font-family: 'Roboto Slab', serif;
+    }
+
+    .ranking{
+        font-size: 35px;
+        font-family: 'Roboto Slab', serif;
+    }
+
+    .verticalPipe{
+        border-left: 1px solid white;
+        height: 100px;
+        left: 50%;
+        right: 50%;
+        margin-left: 3px;
+        top: 0;
+    }
+
+   .played{
+    margin-right:1.3rem;
+   }
+
+   p.ranking{
+    margin-left:2.25rem;
+}
+
+h2{
+    font-size: 45px;
+    padding: 0px 15px;
+    margin-right:5px;
+}
+
+h1{
+    font-size: 50px;
+}
+    
 
    }
