--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -350,7 +350,7 @@ h3{
     border: none;
     border-radius: 25px;
     color: #e4fbff;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 600;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
@@ -487,7 +487,7 @@ h3{
 }
 
 header {
-  width: 100vh;
+  width: 100%;
 }
 
 }
