--- a/src/app/player-profile/player-profile.component.html
+++ b/src/app/player-profile/player-profile.component.html
@@ -2,8 +2,9 @@
   <div class="playerHeaderSection informationContainer">
 
     <!-- <i class="fas fa-glasses"></i><img class="avatar" src='' alt="" /> -->
-    <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=pink' alt="player-avatarOption" />
-    
+    <!-- <i class="fas fa-glasses"></i> -->
+    <img class="avatar" src="{{playerAvatar}}" alt="player-avatarOption" />
+
     <ng-template [ngIf]="playerInfo.username" [ngIfElse]="player" >
       <h1>{{playerInfo.username}}</h1>
     </ng-template>
@@ -11,9 +12,9 @@
     <ng-template #player>
       <h1>Player</h1>
     </ng-template>
-    
 
-    <p class="yearStarted">Player since: 
+
+    <p class="yearStarted">Player since:
       <span id="date">{{ playerInfo.startDate | date: 'longDate' }}</span></p>
 
   </div>
@@ -38,5 +39,5 @@
     <button class="createAvatarbutton" (click)="CreateAvatarRoute()">Create Avatar</button>
     <button class="resetStatsButton" >Reset Stats</button>
   </div>
- 
+
 </body>
